--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -132,7 +132,7 @@ jobs:
 #           mv antora/site/ dist/ASAM_OSI_Standard_${{needs.setup.outputs.output1}}/
       # Create the mandatory README.txt file for the deliverables package. The functions and variables declared below will create a readme file with a defined header, surrounded by a box made of "*".
       - name: Get OSMP version
-        working-directoy: dist/osi-sensor-model-packaging
+        working-directory: dist/osi-sensor-model-packaging
         run: |
           OSMP_VERSION="$(git describe --tags --exclude 'v*.*.*-antora' |  sed 's/^v//')"
       - name: Create README
